@@ -2,8 +2,8 @@ Package: sjstats
 Type: Package
 Encoding: UTF-8
 Title: Collection of Convenient Functions for Common Statistical Computations
-Version: 0.11.1.9000
-Date: 2017-09-20
+Version: 0.11.2
+Date: 2017-09-28
 Author: Daniel Lüdecke <d.luedecke@uke.de>
 Maintainer: Daniel Lüdecke <d.luedecke@uke.de>
 Description: Collection of convenient functions for common statistical computations,
@@ -45,10 +45,12 @@ Imports:
     sjlabelled (>= 1.0.3),
     sjmisc (>= 2.6.1),
     tidyr (>= 0.7.0),
+    tidyselect,
     tibble (>= 1.3.3)
 Suggests:
     AER,
     arm,
+    brms,
     car,
     ggplot2,
     graphics,
