@@ -139,7 +139,7 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,one_of)
 importFrom(dplyr,quos)
 importFrom(dplyr,select)
-importFrom(dplyr,starts_with)
+importFrom(dplyr,slice)
 importFrom(dplyr,summarise)
 importFrom(glmmTMB,VarCorr)
 importFrom(glmmTMB,fixef)
@@ -248,4 +248,5 @@ importFrom(tibble,tibble)
 importFrom(tidyr,gather)
 importFrom(tidyr,nest)
 importFrom(tidyr,unnest)
+importFrom(tidyselect,starts_with)
 importFrom(utils,txtProgressBar)
