@@ -8,6 +8,7 @@ New functions:
 
 Changes to functions:
 * `hdi()` and `rope()` now also work for `brmsfit`-models, from package *brms*.
+* `hdi()` and `rope()` now have a `type`-argument, to return fixed, random or all effects for mixed effects models.
 
 Version 0.11.1
 ------------------------------------------------------------------------------
